tempfile/derive_more/tests/compile_fail/as_ref/unknown_field_attr_arg.rs
#[derive(derive_more::AsRef)]
struct Foo {
    #[as_ref(baz)]
    bar: i32,
}

fn main() {}
